test/semantic_errors/idl/example.foo.taihe
struct Foo {
    a: String;
    b: String;
}

function func(a: String): String;
